<resources>
    <string name="app_name">Inventory App</string>
    <!-- Title in detail activity when an existing product is being edited [CHAR LIMIT=NONE] -->
    <string name="edit_product">Update Product</string>
    <!-- Title in detail activity when a new product is being added [CHAR LIMIT=NONE] -->
    <string name="add_product">Add Product</string>
    <!-- Label for overflow menu option that deletes all product data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>
    <!-- Toast message in editor when new product was successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_succeeded">Product saved!</string>
    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error with updating product</string>
    <!-- Toast message in editor when new product was successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_succeeded">Product updated!</string>
    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>
    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Dialog messages to ask the user to confirm deleting/updating the current product [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">DISCARD</string>
    <string name="keep_editing">KEEP EDITING</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <string name="no_changes_made">No Changes Were Made</string>

    <!-- Titles and text fields in the XML layouts [CHAR LIMIT=20] -->
    <string name="shipment_received">Shipment Received</string>
    <string name="item_sold">Item Sold</string>
    <string name="track_sale">Sale</string>
    <string name="order_from_supplier">Order From Supplier</string>
    <string name="supplier_email_title">Supplier Email</string>
    <string name="product_price_title">Product Price</string>
    <string name="product_quantity_title">Product Quantity</string>
    <string name="product_name_title">Product Name</string>
    <string name="product_name_hint">Insert product name here...</string>
    <string name="product_quantity_hint">How many?</string>
    <string name="product_price_hint">Price per item?</string>
    <string name="enter_email_hint">Enter Email Address</string>

    <!-- Messages for the subject and message body to the supplier when placing a new order [CHAR LIMIT=NONE] -->
    <string name="email_subject">Place New Order</string>
    <string name="email_message_id">Product ID: </string>
    <string name="email_message_name">\nProduct Name: </string>
    <string name="email_message_quantity">\nProduct Quantity: </string>
    <string name="email_message_thanks">\n\nThank You for Your Business!</string>
    <string name="quantity_textview_text">"Quantity: "</string>
    <string name="price_textview_text">Price: $</string>
    <string name="amount_sold_title">Amount Sold</string>
    <string name="amout_sold_hint">Number of Items Sold</string>
    <string name="amount_sold_textview_text">Sold: </string>


</resources>
